fix: multidropdown list height and scrollbar

--- a/src/Shared/Components/MultiDropdown/styleMultiDropdown.module.scss
+++ b/src/Shared/Components/MultiDropdown/styleMultiDropdown.module.scss
@@ -56,11 +56,21 @@
     width: 100%;
     max-width: 226px;
     height: auto;
-    min-height: 24px;
+    max-height: 126px;
     position: absolute;
     left: 0;
     top: 32px;
-    border: none;
+    border: 1px solid #DFE2E4;
+    border-radius: 12px;
+    overflow-y: scroll;
+  }
+
+  &__list::-webkit-scrollbar {
+    width: 0;
+  }
+
+  &__list {
+    scrollbar-width: 0;
   }
 
   &__item {
@@ -69,8 +79,7 @@
     height: auto;
     min-height: 24px;
     background-color: #FFFFFF;
-    border: 0.5px solid #DFE2E4;
-    border-bottom: none;
+    border-top: 0.5px solid #DFE2E4;
     padding: 4px 0 4px 8px;
     font-family: 'Circular Std';
     font-style: normal;
@@ -81,14 +90,7 @@
   }
 
   &__item:first-child {
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-  }
-
-  &__item:last-child  {
-    border-bottom: 0.5px solid #DFE2E4;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
+    border-top: none;
   }
   
   &__item:hover {
